--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             CEO
           </p>
           <p class="text-blk feature-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Full stack developer, I develop applications and websites.
           </p>
           <div class="social-icons">
             <a href="https://abdullahtayeh.co.uk" target="_blank"> 
@@ -70,10 +70,10 @@
             Blain Noone
           </p>
           <p class="text-blk position">
-            CEO
+            Back-end Devloper
           </p>
           <p class="text-blk feature-text">
-            This is some Text. Hi Everyone :)
+            I am DevOps Apprentice at JD Sports Fashion PLC.
           </p>
           <div class="social-icons">
             <a href="https://zinxvalkyria.space" target="_blank"> 
@@ -99,10 +99,10 @@
             Farida Umarova
           </p>
           <p class="text-blk position">
-            CEO
+           Front-end Develoepr
           </p>
           <p class="text-blk feature-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            I am DevOps Apprentice at The HOT Group.
           </p>
           <div class="social-icons">
             <a href="https://www.facebook.com" target="_blank">
@@ -120,10 +120,10 @@
             Ray
           </p>
           <p class="text-blk position">
-            CEO
+            Database specialist
           </p>
           <p class="text-blk feature-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            I am DevOps Apprentice at JD Sports Fashion PLC.
           </p>
           <div class="social-icons">
             <a href="https://www.facebook.com" target="_blank">
@@ -141,10 +141,10 @@
             Wilma T
           </p>
           <p class="text-blk position">
-            CEO
+            Nextjs and React specialist
           </p>
           <p class="text-blk feature-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            I am DevOps Apprentice at JD Sports Fashion PLC.
           </p>
           <div class="social-icons">
             
@@ -163,10 +163,10 @@
             Vadym Burmetskyi
           </p>
           <p class="text-blk position">
-            CEO
+           Back-end Developer
           </p>
           <p class="text-blk feature-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            I am DevOps Apprentice at The HOT Group.
           </p>
           <div class="social-icons">
             
