--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 
 
-</head>
+
+
 
 <div class="topnav">
 
@@ -35,7 +36,8 @@
 </head>
 
 <body>
-    <H1 class="font">Your Destination for Exceptional Web Development!</H1>
+   
+    <!-- <H1 class="font">Your Destination for Exceptional Web Development!</H1>
     <br>
      <h2 > We specialize in turning your digital dreams into reality.</h2>
 <br>
@@ -50,7 +52,7 @@
        <br>
        <br>
        <br>
-       <br>
+       <br> -->
       <!-- <h3> Why Choose Us? 🚀 Expertise: Our seasoned team of web developers brings a wealth of knowledge and skill to the table, ensuring top-tier solutions tailored to your needs. 🌐 Customization: We understand that each project is unique. That's why we craft bespoke websites that align with your brand identity and objectives. 💡 Innovation: Stay ahead in the digital landscape with cutting-edge designs and the latest industry trends integrated seamlessly into your website. 🔍 User-Centric: Your audience is at the heart of what we do. We create intuitive, user-friendly interfaces that keep visitors engaged and delighted. 🌍 Responsiveness: From desktops to smartphones, your website will shine on every screen size, thanks to our dedication to responsive design.</h3>  -->
     <section class="hero">
         <div class="card-grid">
@@ -114,7 +116,7 @@
         <div id="header">
             <h1>Chatbot</h1>
         </div>
-        <div id="chatbot">
+        <!-- <div id="chatbot">
             <div id="conversation">
                 <div class="chatbot-message">
                     <p class="chatbot-text">Hola!! 👋 Great to see you. Type sales or services for contact details</p>
@@ -129,9 +131,9 @@
                 </message-container>
 
             </form>
-        </div>
-
+        </div> -->
+</div>
 </body>
 
-</div>
+
 </html>
